Fixes to scrollbar. Footer to separate include Alternate in-page-nav look

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -24,14 +24,25 @@ body{
 			margin: 10px 0px;
 			h2{
 				@include fonts.font-body2();
+				margin-bottom: 8px;
 			}
 			&:first-of-type{
 				padding-top: 20px;
 				border-top: 1px solid white;
 			}
 		}
-		a{
+		a, a:visited, a:hover, a:link, a:active{
 			color: white;
+		}
+		div.icons{
+			display: flex;
+			gap: 15px;
+		}
+		li{
+			line-height: 24px;
+			a{
+				font-size: 12px;
+			}
 		}
 	}
 }
@@ -78,30 +89,21 @@ body{
 		footer{
 			z-index: 200;
 			background-color: transparent;
+			grid-template-columns: auto auto auto;
+			grid-template-rows: auto auto auto;
+			#logo_white{ grid-row: 1; grid-column: 1/4; }
 			#logo_white, .icons{
 				path{ fill: colours.nightSky(); }
 			}
 			color: colours.nightSky();
-			a, a:visited, a:hover, a:active{
+			a, a:visited, a:hover, a:active, a:link{
 				color: colours.nightSky();
 			}
 			section.links, .icons {
 				border-top-color: colours.nightSky() !important;
 			}
-		}
-    }
-}
-@media screen and (min-width: 1500px) {
-	body{
-		footer{
-			min-height: 200px;
-			grid-template-columns: auto auto auto auto;
-			grid-template-rows: auto auto auto;
-			align-items: start;
-			justify-content: center;
-			#logo_white{ grid-row: 1; grid-column: 1/5; }
 			section.links{
-				padding: 20px;
+				padding: 20px 20px 0px 20px;
 				border-top: 1px solid white;
 				&:nth-of-type(1){
 					grid-row: 2;
@@ -117,16 +119,41 @@ body{
 				}
 			}
 			.icons{
+				grid-row: 3;
+				grid-column: 1/4;
+				padding-left: 20px;
+			}
+			.copyright{
+				grid-row: 4;
+				grid-column: 1/4;
+				padding-left: 20px;
+				padding-right: 20px;
+				margin: 0px;
+			}
+		}
+    }
+}
+@media screen and (min-width: 1500px) {
+	body{
+		footer{
+			min-height: 200px;
+			grid-template-columns: auto auto auto auto;
+			grid-template-rows: auto auto auto;
+			align-items: start;
+			justify-content: center;
+			#logo_white{ grid-row: 1; grid-column: 1/5; }
+			section.links{
+				padding: 20px;
+			}
+			.icons{
 				grid-row: 2;
 				grid-column: 4;
 				padding: 20px;
-				border-top: 1px solid white;
+				border-top: 1px solid white; 
 			}
 			.copyright{
 				grid-row: 3;
 				grid-column: 1/5;
-				padding-left: 20px;
-				padding-right: 20px;
 			}
 		}
     }
