--- a/styles/components/_sidebar.scss
+++ b/styles/components/_sidebar.scss
@@ -16,6 +16,7 @@ body{
 		background-color: colours.deepBlue(10);
 		border-top-left-radius: variables.$borderradius;
 		z-index: 115;
+		border-right: 1px solid colours.nightSky(20);
 	}
 
 	&.sidebar-expanded{
@@ -40,6 +41,7 @@ body{
 			display: block;
 			grid-column: 1;
 			width: 250px;
+			border-right-width: 0px;
 		}
 	}
 }
